bootstrap/tests/snapshots/generics_parser_tests__generics_ok_generic_function_simple.ast.snap
---
source: tests/generics_parser_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "identity",
        "type_params": [
          {
            "name": "T",
            "constraints": []
          }
        ],
        "params": [
          {
            "pattern": {
              "Identifier": "value"
            },
            "type_ref": {
              "Simple": "T"
            },
            "default": null
          }
        ],
        "return_type": {
          "Simple": "T"
        },
        "body": {
          "stmts": [
            {
              "Return": {
                "expr": {
                  "Identifier": "value"
                }
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
